# git-gov

./: .gitignore  CONTRIBUTING.md  Cargo.toml  JULES_ROADMAP.md  LICENSE  Makefile  READEME.md  README.en.md  README.md  bootstrap.sh  cliff-craft.toml  cliff-watch-witness.vsix  cliff-watch.toml  demo_live.sh  git-gov.toml  install.sh  test.md  unauthorized_change.txt  validation_report.md
clients/cliff-craft-witness/: package.json  tsconfig.json
clients/cliff-craft-witness/src/: extension.ts  transport.ts
clients/cliff-craft-witness/tests/: integration.test.ts
clients/cliff-watch-witness/: cliff-watch-witness-v3.0.vsix  package-lock.json  package.json
clients/cliff-watch-witness/src/: extension.ts  transport.ts  types.ts
clients/cliff-watch-witness/tests/: certification.test.ts  integration.test.ts
clients/vscode-witness/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
clients/vscode-witness/src/: extension.ts  transport.ts  types.ts
clients/vscode-witness/tests/: certification.test.ts  integration.test.ts  transport.test.ts
crates/cliff-craft-cli/: Cargo.toml
crates/cliff-craft-cli/src/: main.rs
crates/cliff-craft-core/: Cargo.toml
crates/cliff-craft-core/examples/: scientific_validation.rs
crates/cliff-craft-core/src/: complexity.rs  config.rs  crypto.rs  entropy.rs  focus_protocol.rs  focus_session.rs  git.rs  monitor.rs  mouse_sentinel.rs  protocol.rs  stats.rs
crates/cliff-craft-core/src/backend/: ide_sensor.rs
crates/cliff-craft-core/src/crypto/: zkp.rs
crates/cliff-craft-core/tests/: coupling_tests.rs  integration_test_report.txt  integration_test_results.json  monitor_tests.rs  mouse_sentinel_tests.rs  roadmap_integration_tests.rs  thermodynamic_properties.rs
crates/cliff-craft-daemon/: Cargo.toml
crates/cliff-craft-daemon/src/: ipc.rs  main.rs
crates/cliff-watch-cli/: Cargo.toml
crates/cliff-watch-cli/src/: main.rs
crates/cliff-watch-core/: Cargo.toml
crates/cliff-watch-core/examples/: scientific_validation.rs
crates/cliff-watch-core/src/: complexity.rs  config.rs  crypto.rs  focus_protocol.rs  focus_session.rs  git.rs  lib.rs  monitor.rs  mouse_sentinel.rs  protocol.rs  stats.rs  ui_templates.rs
crates/cliff-watch-core/src/backend/: ide_sensor.rs
crates/cliff-watch-core/src/crypto/: tpm.rs  zkp.rs
crates/cliff-watch-core/tests/: coupling_tests.rs  integration_test_report.txt  integration_test_results.json  monitor_tests.rs  mouse_sentinel_tests.rs  roadmap_integration_tests.proptest-regressions  roadmap_integration_tests.rs  thermodynamic_properties.rs
crates/cliff-watch-daemon/: Cargo.toml
crates/cliff-watch-daemon/src/: ipc.rs  main.rs
crates/git-gov-cli/: Cargo.toml
crates/git-gov-cli/src/: main.rs
crates/git-gov-core/: Cargo.toml
crates/git-gov-core/examples/: scientific_validation.rs
crates/git-gov-core/src/: complexity.rs  config.rs  crypto.rs  entropy.rs  focus_protocol.rs  focus_session.rs  git.rs  lib.rs  monitor.rs  mouse_sentinel.rs  protocol.rs  stats.rs
crates/git-gov-core/src/backend/: ide_sensor.rs  linux.rs  mod.rs
crates/git-gov-core/src/crypto/: zkp.rs
crates/git-gov-core/tests/: coupling_tests.rs  integration_test_report.txt  integration_test_results.json  monitor_tests.rs  mouse_sentinel_tests.rs  roadmap_integration_tests.proptest-regressions  roadmap_integration_tests.rs  thermodynamic_properties.rs
crates/git-gov-daemon/: Cargo.toml
crates/git-gov-daemon/src/: ipc.rs  main.rs
docs/: EDGE_CASES.md  estructura_proyecto.md  test_results_summary.md  validation_report.md
docs/phase1/: dependencias_validadas.md  plan_mitigacion_riesgos.md  requisitos_resumidos.md
docs/phase2/: arquitectura_sistema.md  definicion_modulos.md  diseno_mouse_sentinel.md
docs/principios/: dry_lean_solid.md
docs/research/: requisitos_clave.md  rust-lean-dry-solid.md
docs/research/v1/: Mouse-Sentinel.md  requisitos_clave.md  rust-lean-dry-solid.md  sentinel-protocol.md
docs/research/v3/: gemini.md  perplexity.md
docs/roadmaps/: architecture_correction_roadmap.md  cliff-craft-pareto-roadmap.md  git-gov-pareto-roadmap.md
docs/roadmaps/start/: roadmap.md
examples/: cliff-craft-action.yml  git-gov-action.yml
feature/future-architecture/: entropy_fusion.rs  kinematic.rs  provenance.rs  sentinel_builder.rs  sentinel_collector.rs  sentinel_finalize.rs  sentinel_hash.rs  sentinel_pow.rs  sentinel_report.rs  sentinel_sign.rs  sentinel_signer.rs  stats.rs  structural.rs  temporal.rs
