[workspace]
members = [
    "crates/cliff-craft-core",
    "crates/cliff-craft-cli",
    "crates/cliff-craft-daemon",
]
resolver = "2"

[workspace.package]
name = "cliff-craft"
version = "0.1.0"
edition = "2021"
authors = ["Cliff-Craft Project"]
description = "Sovereign Proof of Human Work (PoHW) Protocol"
repository = "https://github.com/iodevs-net/cliff-craft"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Serialization & Async
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Monitoring & Events
evdev = "0.12"
ctrlc = "3.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["fast", "rand_core"] }
curve25519-dalek = { version = "4.1", features = ["serde", "rand_core"] }
merlin = "3.0"
sha2 = "0.10"

# Data
zstd = "0.13"
bincode = "1.3"
statrs = "0.16"
git2 = "0.18"
notify = "6.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
config = "0.13"
toml = "0.8"

# Advanced Crypto v3.0
bulletproofs = "5.0"
tss-esapi = "7.5"

# Local Crates
cliff-craft-core = { path = "crates/cliff-craft-core" }