[package]
name = "cliff-craft-core"
version.workspace = true
edition.workspace = true
description = "Core logic for Cliff-Craft Sovereign Proof of Human Work protocol."

[features]
default = []
# Activar para usar el backend legacy que lee /dev/input (requiere root)
legacy-evdev = ["evdev"]

[dependencies]
# Workspace dependencies inherited
git2 = { workspace = true }
notify = { workspace = true }
zstd = { workspace = true }
statrs = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
# Randomness for key generation
rand = "0.8"

# Advanced Crypto v3.0
bulletproofs = "5.0"
curve25519-dalek = { workspace = true, features = ["serde", "rand_core"] }
merlin = { workspace = true }
tss-esapi = "7.5"
syn = { version = "2.0", features = ["full"] } # Para análisis sintáctico

# Async runtime and utilities
tokio = { version = "1.40", features = ["full"] }

# Logging
tracing = "0.1"
tokio-util = { version = "0.7.18", features = ["full"] }

# Legacy hardware backend (optional)
evdev = { version = "0.13.2", features = ["tokio"], optional = true }

config = "0.13"
toml = "0.8"

[dev-dependencies]
# Testing frameworks
proptest = "1.4"
quickcheck = "1.0"
test-strategy = "0.4"
