[package]
name = "git-gov-cli"
version = "0.1.0"
edition = "2021"
authors = ["git-gov project"]
description = "CLI interface for git-gov decentralized code governance"

[dependencies]
git-gov-core = { path = "../git-gov-core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
anyhow = "1.0"
tracing = "0.1"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1

[features]
default = []
lean = []